--- a/aws_rego/pyproject.toml
+++ b/aws_rego/pyproject.toml
@@ -16,4 +16,4 @@ dev-dependencies = [
 ]
 
 [tool.uv.workspace]
-members = ["ec2_checks/ec2_old_snapshots"]
+members = ["ec2_checks/ec2_old_snapshots", "ec2_checks/idle_instances", "ec2_checks/stray_ebs", "ec2_checks/stray_instances", "ec2_checks/unattached_eips"]
