--- a/aws_providers/ec2/pyproject.toml
+++ b/aws_providers/ec2/pyproject.toml
@@ -1,12 +1,14 @@
 [project]
-name = "opsbox_ec2_provider"
-version = "0.1.0"
+name = "opsbox-ec2-provider"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
+    "boto3>=1.35.87",
     "loguru>=0.7.2",
     "pluggy>=1.5.0",
+    "opsbox-general-provider>=0.1.2"
 ]
 
 [project.entry-points.'opsbox.plugins']
