--- a/aws_providers/elb/pyproject.toml
+++ b/aws_providers/elb/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "opsbox-elb-provider"
-version = "0.1.0"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
@@ -8,6 +8,7 @@ dependencies = [
     "boto3>=1.35.71",
     "loguru>=0.7.2",
     "pluggy>=1.5.0",
+    "opsbox-general-provider>=0.1.2"
 ]
 
 [project.entry-points.'opsbox.plugins']
