add output manifests

--- a/outputs/Github/pyproject.toml
+++ b/outputs/Github/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "opsbox_github_out"
-version = "0.1.0"
+name = "opsbox_github_output"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
@@ -10,6 +10,7 @@ dependencies = [
     "pandas>=2.2.3",
     "pydantic>=2.10.2",
     "requests>=2.32.3",
+    "opsbox-general-handler>=0.1.2"
 ]
 
 [project.entry-points.'opsbox.plugins']
