--- a/outputs/Azure/pyproject.toml
+++ b/outputs/Azure/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "opsbox_azure_out"
-version = "0.1.0"
+name = "opsbox-azure-output"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
@@ -11,6 +11,7 @@ dependencies = [
     "pluggy>=1.5.0",
     "pydantic>=2.10.2",
     "requests>=2.32.3",
+    "opsbox-general-handler>=0.1.2"
 ]
 
 [project.entry-points.'opsbox.plugins']
