--- a/outputs/PagerDuty/pyproject.toml
+++ b/outputs/PagerDuty/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "opsbox_pagerduty_out"
-version = "0.1.0"
+name = "opsbox_pagerduty_output"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
@@ -9,6 +9,7 @@ dependencies = [
     "loguru>=0.7.2",
     "pydantic>=2.10.2",
     "requests>=2.32.3",
+    "opsbox-general-handler>=0.1.2"
 ]
 
 [project.entry-points.'opsbox.plugins']
