--- a/outputs/cli/pyproject.toml
+++ b/outputs/cli/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
-name = "cli"
-version = "0.1.0"
+name = "opsbox-cli-output"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
     "pluggy>=1.5.0",
+    "opsbox-general-handler>=0.1.2"
 ]
 
 [project.entry-points.'opsbox.plugins']
@@ -20,4 +21,4 @@ build-backend = "setuptools.build_meta"
 include-package-data = true
 
 [tool.setuptools.package-data]
-"cli" = ["manifest.toml"]
+"cli_output" = ["manifest.toml"]
