--- a/outputs/email/pyproject.toml
+++ b/outputs/email/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "opsbox_email_out"
-version = "0.1.0"
+name = "opsbox-email-output"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
@@ -8,6 +8,7 @@ dependencies = [
     "loguru>=0.7.2",
     "pluggy>=1.5.0",
     "pydantic>=2.10.2",
+    "opsbox-general-handler>=0.1.2"
 ]
 
 [project.entry-points.'opsbox.plugins']
