--- a/outputs/slack/pyproject.toml
+++ b/outputs/slack/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "opsbox_slack_out"
-version = "0.1.0"
+name = "opsbox_slack_output"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
@@ -8,6 +8,7 @@ dependencies = [
     "pluggy>=1.5.0",
     "pydantic>=2.10.2",
     "slack-sdk>=3.34.0",
+    "opsbox-general-handler>=0.1.2"
 ]
 
 [project.entry-points.'opsbox.plugins']
