--- a/outputs/text_file/pyproject.toml
+++ b/outputs/text_file/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "opsbox-text-file-output"
-version = "0.1.0"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
     "pluggy>=1.5.0",
+    "opsbox-general-handler>=0.1.2"
 ]
 
 [build-system]
