--- a/aws_rego/rds_checks/pyproject.toml
+++ b/aws_rego/rds_checks/pyproject.toml
@@ -12,6 +12,12 @@ dependencies = [
 [tool.setuptools.packages.find]
 include = ["*"]
 
+[tool.uv]
+dev-dependencies = [
+    "mkdocs>=1.6.1",
+    "pytest>=8.3.4",
+]
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
