Add AWS descriptions

--- a/aws_rego/elb_checks/pyproject.toml
+++ b/aws_rego/elb_checks/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "opsbox-elb-checks"
 version = "0.1.2"
-description = "Add your description here"
+description = "Collection of ELB checks for opsbox"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
