--- a/aws_rego/rds_checks/pyproject.toml
+++ b/aws_rego/rds_checks/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "opsbox-rds-checks"
 version = "0.1.2"
-description = "Add your description here"
+description = ""Collection of RDS checks for opsbox"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
