--- a/aws_providers/r53/pyproject.toml
+++ b/aws_providers/r53/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "opsbox-r53-provider"
 version = "0.1.2"
-description = "Add your description here"
+description = "Opsbox provider for Route 53 checks"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
