--- a/aws_providers/ec2/pyproject.toml
+++ b/aws_providers/ec2/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "boto3>=1.35.87",
     "loguru>=0.7.2",
     "pluggy>=1.5.0",
-    "opsbox-general-provider>=0.1.2"
+    "opsbox-general-handler>=0.1.2"
 ]
 
 [project.entry-points.'opsbox.plugins']
@@ -23,3 +23,10 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 "ec2_provider" = ["manifest.toml"]
+
+[tool.uv]
+dev-dependencies = [
+    "mkdocs>=1.6.1",
+    "opsbox-general-handler>=0.1.2",
+    "pytest>=8.3.4",
+]
