--- a/aws_providers/iam/pyproject.toml
+++ b/aws_providers/iam/pyproject.toml
@@ -8,8 +8,7 @@ dependencies = [
     "boto3>=1.35.71",
     "loguru>=0.7.2",
     "pluggy>=1.5.0",
-    "opsbox-general-provider>=0.1.2"
-]
+    "opsbox-general-handler>=0.1.2"]
 
 [project.entry-points.'opsbox.plugins']
 opsbox_iam_provider = "iam_provider.iam_provider:IAMProvider"
@@ -23,3 +22,10 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 "iam_provider" = ["manifest.toml"]
+
+[tool.uv]
+dev-dependencies = [
+    "mkdocs>=1.6.1",
+    "opsbox-general-handler>=0.1.2",
+    "pytest>=8.3.4",
+]
