--- a/outputs/cli/pyproject.toml
+++ b/outputs/cli/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "opsbox-cli-output"
 version = "0.1.2"
-description = "Add your description here"
+description = "Command-line output for opsbox"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
