--- a/outputs/jira/pyproject.toml
+++ b/outputs/jira/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "opsbox_jira_output"
 version = "0.1.2"
-description = "Add your description here"
+description = "Jira backlog output for opsbox"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
