--- a/assistants/cost_savings/pyproject.toml
+++ b/assistants/cost_savings/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "opsbox-cost-savings-assistant"
 version = "0.1.2"
-description = "Add your description here"
+description = "Cost savings assistant for opsbox"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [    
