--- a/aws_rego/elb_checks/pyproject.toml
+++ b/aws_rego/elb_checks/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-elb-checks"
 version = "0.1.2"
 description = "Collection of ELB checks for opsbox"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "opsbox-elb-provider>=0.1.2",
