--- a/aws_providers/ec2/pyproject.toml
+++ b/aws_providers/ec2/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-ec2-provider"
 version = "0.1.2"
 description = "Opsbox provider for EC2 checks"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "boto3>=1.35.87",
