--- a/aws_providers/r53/pyproject.toml
+++ b/aws_providers/r53/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-r53-provider"
 version = "0.1.2"
 description = "Opsbox provider for Route 53 checks"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "boto3>=1.35.71",
