--- a/aws_rego/elb_checks/high_error_rate/pyproject.toml
+++ b/aws_rego/elb_checks/high_error_rate/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-elb-high-error-rate"
 version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
