--- a/aws_rego/elb_checks/low_request_counts/pyproject.toml
+++ b/aws_rego/elb_checks/low_request_counts/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-elb-low-request-counts"
 version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
