--- a/aws_rego/iam_checks/pyproject.toml
+++ b/aws_rego/iam_checks/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-aws-iam-checks"
 version = "0.1.2"
 description = ""Collection of IAM checks for opsbox"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "opsbox-iam-provider>=0.1.2",
