--- a/aws_rego/r53_checks/pyproject.toml
+++ b/aws_rego/r53_checks/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-r53-checks"
 version = "0.1.2"
 description = ""Collection of Route 53 checks for opsbox"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "opsbox-r53-provider>=0.1.2",
