--- a/aws_rego/rds_checks/pyproject.toml
+++ b/aws_rego/rds_checks/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-rds-checks"
 version = "0.1.2"
 description = ""Collection of RDS checks for opsbox"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "opsbox-rds-provider>=0.1.2",
