--- a/aws_rego/rds_checks/rds_old_snapshots/pyproject.toml
+++ b/aws_rego/rds_checks/rds_old_snapshots/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-rds-old-snapshots"
 version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "boto3>=1.35.86",
