--- a/handlers/general_handler/pyproject.toml
+++ b/handlers/general_handler/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-general-handler"
 version = "0.1.2"
 description = "General Handler for opsbox."
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
