--- a/handlers/rego_handler/pyproject.toml
+++ b/handlers/rego_handler/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox_rego_handler"
 version = "0.1.2"
 description = "Handles rego plugins for opsbox"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
