--- a/outputs/Azure/pyproject.toml
+++ b/outputs/Azure/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-azure-output"
 version = "0.1.2"
 description = "Azure issues output for opsbox"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "llama-index>=0.12.6",
