--- a/outputs/cli/pyproject.toml
+++ b/outputs/cli/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-cli-output"
 version = "0.1.2"
 description = "Command-line output for opsbox"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
