--- a/outputs/email/pyproject.toml
+++ b/outputs/email/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox-email-output"
 version = "0.1.2"
 description = "Email output for Opsbox"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
