--- a/outputs/jira/pyproject.toml
+++ b/outputs/jira/pyproject.toml
@@ -3,6 +3,7 @@ name = "opsbox_jira_output"
 version = "0.1.2"
 description = "Jira backlog output for opsbox"
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "llama-index>=0.12.6",
