--- a/aws_rego/r53_checks/pyproject.toml
+++ b/aws_rego/r53_checks/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "opsbox-r53-checks"
 version = "0.1.2"
-description = ""Collection of Route 53 checks for opsbox"
+description = "Collection of Route 53 checks for opsbox"
 readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = "==3.11.*"
