--- a/outputs/jira/pyproject.toml
+++ b/outputs/jira/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "opsbox_jira_output"
+name = "opsbox-jira-output"
 version = "0.1.2"
 description = "Jira backlog output for opsbox"
 readme = "README.md"
