--- a/handlers/rego_handler/pyproject.toml
+++ b/handlers/rego_handler/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "opsbox_rego_handler"
+name = "opsbox-rego-handler"
 version = "0.1.2"
 description = "Handles rego plugins for opsbox"
 readme = "README.md"
