--- a/outputs/slack/pyproject.toml
+++ b/outputs/slack/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "opsbox_slack_output"
+name = "opsbox-slack-output"
 version = "0.1.2"
 description = "Slack channel output for opsbox"
 readme = "README.md"
