--- a/aws_rego/ec2_checks/pyproject.toml
+++ b/aws_rego/ec2_checks/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "opsbox-ec2-checks"
-version = "0.1.3"
+version = "0.1.4"
 description = "Collection of EC2 checks for opsbox."
 readme = "README.md"
-license = {file = "LICENSE"}
+license = {file = "LICENCE.txt"}
 requires-python = "==3.11.*"
 dependencies = [
     "opsbox-ec2-provider>=0.1.2",
@@ -30,6 +30,5 @@ include-package-data = true
 opsbox_ec2_old_snapshots = "ec2_old_snapshots.ec2_old_snapshots.ec2_old_snapshots:EC2OLD"
 opsbox_ec2_idle_instances = "idle_instances.idle_instances.idle_instances:IdleInstances"
 opsbox_ec2_stray_ebs = "stray_ebs.stray_ebs.stray_ebs:StrayEbs"
-opsbox_ec2_stray_instances = "stray_instances.stray_instances.stray_instances:StrayInstances"
 opsbox_ec2_unattached_eips = "unattached_eips.unattached_eips.unattached_eips:UnattachedEips"
 
