--- a/handlers/rego_handler/pyproject.toml
+++ b/handlers/rego_handler/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "opsbox_rego_handler"
-version = "0.1.2"
+version = "0.1.4"
 description = "Handles rego plugins for opsbox"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = {file = "LICENCE.txt"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
