--- a/outputs/email/pyproject.toml
+++ b/outputs/email/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "opsbox-email-output"
-version = "0.1.2"
+version = "0.1.4"
 description = "Email output for Opsbox"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = {file = "LICENCE.txt"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
@@ -13,7 +13,7 @@ dependencies = [
 ]
 
 [project.entry-points.'opsbox.plugins']
-opsbox_email_out = "email.smtp:EmailOutput"
+opsbox_email_out = "email.email.smtp:EmailOutput"
 
 [build-system]
 requires = ["setuptools>=61.0"]
