--- a/aws_rego/elb_checks/pyproject.toml
+++ b/aws_rego/elb_checks/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "opsbox-elb-checks"
-version = "0.1.3"
+version = "0.1.4"
 description = "Collection of ELB checks for opsbox"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -23,6 +23,7 @@ dev-dependencies = [
 opsbox_elb_low_request_counts = "low_request_counts.low_request_counts.low_request_count:LowRequestCount"
 opsbox_elb_inactive_load_balancers = "inactive_load_balancers.inactive_load_balancers.inactive_load_balancers:InactiveLoadBalancers"
 opsbox_elb_high_error_rate = "high_error_rate.high_error_rate.high_error_rate:HighErrorRate"
+opsbox_elb_no_healthy_targets = "no_healty_targets.no_healty_targets.no_healty_targets:NoHealthyTargets"
 
 [tool.setuptools]
 include-package-data = true
