--- a/aws_rego/elb_checks/pyproject.toml
+++ b/aws_rego/elb_checks/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "opsbox-elb-checks"
-version = "0.1.2"
+version = "0.1.5"
 description = "Collection of ELB checks for opsbox"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = {file = "LICENCE.txt"}
 requires-python = "==3.11.*"
 dependencies = [
     "opsbox-elb-provider>=0.1.2",
@@ -23,6 +23,7 @@ dev-dependencies = [
 opsbox_elb_low_request_counts = "low_request_counts.low_request_counts.low_request_count:LowRequestCount"
 opsbox_elb_inactive_load_balancers = "inactive_load_balancers.inactive_load_balancers.inactive_load_balancers:InactiveLoadBalancers"
 opsbox_elb_high_error_rate = "high_error_rate.high_error_rate.high_error_rate:HighErrorRate"
+opsbox_elb_no_healthy_targets = "no_healthy_targets.no_healthy_targets.no_healthy_targets:NoHealthyTargets"
 
 [tool.setuptools]
 include-package-data = true
