--- a/aws_rego/rds_checks/pyproject.toml
+++ b/aws_rego/rds_checks/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "opsbox-rds-checks"
-version = "0.1.3"
+version = "0.1.5"
 description = "Collection of RDS checks for opsbox"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = {file = "LICENCE.txt"}
 requires-python = "==3.11.*"
 dependencies = [
     "opsbox-rds-provider>=0.1.2",
