denest, decruft, and clean out old IAM directory structure

--- a/aws_rego/iam_checks/pyproject.toml
+++ b/aws_rego/iam_checks/pyproject.toml
@@ -26,9 +26,9 @@ build-backend = "setuptools.build_meta"
 include-package-data = true
 
 [project.entry-points.'opsbox.plugins']
-opsbox_aws_iam_mfa_enabled = "mfa_enabled.mfa_enabled.mfa_enabled:IAMMFADisabled"
-opsbox_aws_iam_console_access = "console_access.console_access.console_access:ConsoleAccessIAM"
-opsbox_aws_iam_overdue_api_keys = "overdue_api_keys.overdue_api_keys.overdue_api_keys:OverdueAPIKeysIAM"
-opsbox_aws_iam_unused_policies = "unused_policies.unused_policies.unused_policies:UnusedIAMPolicies"
+opsbox_aws_iam_mfa_enabled = "mfa_enabled.mfa_enabled:IAMMFADisabled"
+opsbox_aws_iam_console_access = "console_access.console_access:ConsoleAccessIAM"
+opsbox_aws_iam_overdue_api_keys = "overdue_api_keys.overdue_api_keys:OverdueAPIKeysIAM"
+opsbox_aws_iam_unused_policies = "unused_policies.unused_policies:UnusedIAMPolicies"
 
 
