denest, decruft, and clean out old r53 directory structure

--- a/aws_rego/r53_checks/pyproject.toml
+++ b/aws_rego/r53_checks/pyproject.toml
@@ -26,5 +26,5 @@ build-backend = "setuptools.build_meta"
 include-package-data = true
 
 [project.entry-points.'opsbox.plugins']
-opsbox_r53_empty_zones = "empty_zones.empty_zones.empty_zones:EmptyZones"
+opsbox_r53_empty_zones = "empty_zones.empty_zones:EmptyZones"
 
