--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
+    "opsbox==0.2.0",
     "pydantic>=2.10.2",
     "pymdown-extensions>=10.12",
     "tqdm>=4.67.1",
