--- a/outputs/cli/pyproject.toml
+++ b/outputs/cli/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "opsbox-cli-output"
-version = "0.2.0"
+version = "0.2.1"
 description = "Command-line output for opsbox"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = {file = "LICENCE.txt"}
 requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.entry-points.'opsbox.plugins']
-opsbox_cli = "cli.cli.cli:CLIOutput"
+opsbox_cli = "cli.cli:CLIOutput"
 
 [build-system]
 requires = ["setuptools>=61.0"]
