--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ requires-python = "==3.11.*"
 dependencies = [
     "loguru>=0.7.2",
     "opsbox==0.2.0",
+    "pathspec>=0.12.1",
     "pydantic>=2.10.2",
     "pymdown-extensions>=10.12",
+    "rich>=13.9.4",
     "tqdm>=4.67.1",
 ]
 
