--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,10 +27,10 @@ jobs:
         run: pip install uv
 
       - name: Install requirements
-        run: uv sync
+        run: uv sync --all-extras
 
       - name: Run Pytest tests
-        run: uv run pytest . --ignore=./tests/integration --html=report.html --self-contained-html -s --junit-xml=junit.xml
+        run: uv run pytest . --html=report.html --self-contained-html -s --junit-xml=junit.xml
 
       - name: Upload Pytest report
         uses: actions/upload-artifact@v4
