--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ testing = [
     "moto>=5.0.27",
     "pytest>=8.3.4",
     "slack-sdk>=3.34.0",
+    "pytest-html>=4.1.1",
+    "pytest-cov>=6.0.0",
 ]
 
 
