add logging debug

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install requirements
         run: |
           uv sync --all-extras
-          curl -L -o opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
+          curl -L -o ./opa https://openpolicyagent.org/downloads/latest/opa_linux_amd64
 
       - name: Run Pytest tests
         run: |
