--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run Pytest tests
         run: |
           ls -la
-          uv run pytest . --html=report.html --self-contained-html -s --junit-xml=junit.xml
+          uv run pytest . --html=report.html --self-contained-html -rPf --junit-xml=junit.xml
 
       - name: Upload Pytest report
         uses: actions/upload-artifact@v4
