--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -35,8 +35,8 @@ jobs:
         run: |
           ls -la
           chmod +x ./opa
-          ./opa --version
-          
+          ./opa version
+
       - name: Get Python CWD
         run: |
           ls -la
