--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -35,15 +35,12 @@ jobs:
         run: |
           ls -la
           chmod +x ./opa
-          ./opa version
-
+          ./opa --version
+          
       - name: Get Python CWD
         run: |
           ls -la
-          uv run python
-          import os
-          print(os.getcwd())
-          exit()
+          uv run python -c "import os; print(os.getcwd())"
 
       - name: Run Pytest tests
         run: |
