--- a/outputs/Azure/pyproject.toml
+++ b/outputs/Azure/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pluggy>=1.5.0",
     "pydantic>=2.10.2",
     "requests>=2.32.3",
+    "markdown>=3.7",
     "opsbox-general-handler>=0.1.2"
 ]
 
