--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = "==3.11.*"
 dependencies = [
+    "azure-identity>=1.20.0",
+    "azure-mgmt-compute>=34.0.0",
+    "azure-mgmt-monitor>=6.0.2",
+    "azure-mgmt-network>=28.1.0",
     "loguru>=0.7.2",
     "opsbox==0.2.0",
     "pathspec>=0.12.1",
