--- a/azure_providers/vm/pyproject.toml
+++ b/azure_providers/vm/pyproject.toml
@@ -6,14 +6,17 @@ readme = "README.md"
 license = {file = "LICENCE.txt"}
 requires-python = "==3.11.*"
 dependencies = [
-    "boto3>=1.35.87",
     "loguru>=0.7.2",
     "pluggy>=1.5.0",
-    "opsbox-general-handler>=0.1.2"
+    "opsbox-general-handler>=0.1.2",
+    "azure-identity>=1.20.0",
+    "azure-mgmt-compute>=34.0.0",
+    "azure-mgmt-monitor>=6.0.2",
+    "azure-mgmt-network>=28.1.0",
 ]
 
 [project.entry-points.'opsbox.plugins']
-azurevm_provider = "azure_vm_provider.azure_vm_provider:AzureVMProvider"
+azurevm_provider = "vm_provider.azure_vm_provider:AzureVMProvider"
 
 [build-system]
 requires = ["setuptools>=61.0"]
